--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,14 +3,5 @@
 </div>
 
 <div class="sidebar well">
-    <h1>Recent Posts</h1>
-    <ul>
-        {% for post in site.posts limit:5 %}
-          <li><a href="{{ site.baseurl}}{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-    </ul>
-</div>
-
-<div class="sidebar well">
-{% include links-list.html %}
+    <h1>Tags</h1>
 </div>
