--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="{{ site.baseurl }}/">Home</a></li>
-                    <li class="active visible-xs-block"><a href="{{ site.baseurl }}/sidebar.html">Tags</a></li>
+                    <li class="active visible-xs-block"><a href="{{ site.baseurl }}/tags.html">Tags</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/archive.html">Archive</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/about.html">About</a></li>
                     {% if site.github != '' %}
