--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,7 @@
                     <li class="active"><a href="{{ site.baseurl }}/">Home</a></li>
                     <li class="active visible-xs-block"><a href="{{ site.baseurl }}/tags.html">Tags</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/archive.html">Archive</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/alltags.html">All Tags</a></li>
                     {% if site.github != '' %}
                       <li class="active"><a href="https://github.com/{{ site.github }}">Github</a></li>
                     {% endif %}
