--- a/_includes/tags_list.html
+++ b/_includes/tags_list.html
@@ -1,6 +1,14 @@
 <h1>Tags</h1>
+{% capture tags %}
+    {% for tag in site.tags %}
+        {{ tag[0] }}
+    {% endfor %}
+{% endcapture %}
+{% assign sortedtags = tags | split:' ' | sort %}
+
 <ul>
-    <li>Wireless</li>
-    <li>Decoding</li>
-    <li>Neuroscience Fundamentals</li>
+{% for tag in sortedtags %}
+<li><a href="{{ site.baseurl }}/tags/{{ tag }}.html">{{ tag }}</a></li>
+{% endfor %}
 </ul>
+
