Better support for tags. Tags with spaces should be replaced with underscores in the markdown file as well as their tags page. Upon rendering, the underscores are replaced with spaces. This also means no tags should have actual underscores in them.

--- a/_includes/tag_line.html
+++ b/_includes/tag_line.html
@@ -3,9 +3,9 @@
     tags:
     {% for tag in page.tags %}
         {% if forloop.last %}
-        <span><a href="{{ site.baseurl }}/tags/{{ tag }}.html">{{ tag }}</a></span>
+        <span><a href="{{ site.baseurl }}/tags/{{ tag }}.html">{{ tag | split:'_' | join:' ' }}</a></span>
         {% else %}
-        <span><a href="{{ site.baseurl }}/tags/{{ tag }}.html">{{ tag }},</a></span>
+        <span><a href="{{ site.baseurl }}/tags/{{ tag }}.html">{{ tag | split:'_' | join:' ' }},</a></span>
         {% endif %}
     {% endfor %}
 </small>
