--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="well">
-    <h1>{{ page.tag }}</h1>
+    <h1>{{ page.tag | replace:'_',' ' }}</h1>
 
     <ul>
         {% for post in site.tags[page.tag] %}
