Got the image stuff working. Changed to kramdown. Can fit image width to parent div by using width=100%

--- a/css/theme.css
+++ b/css/theme.css
@@ -49,3 +49,10 @@ body {
 .author a {
     color: #ee4444;
 }
+
+.center-image {
+    margin: 2px;
+    display: block;
+    padding: 19px;
+    width: 80%;
+}
