Just checking if gh-pages turn the production variable on

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,10 @@
 
 {% include disqus-counts.html %}
 {% if jekyll.environment == 'production' %}
+production!
 {% include analytics.html %}
+{% else %}
+not production!
 {% endif %}
 
 </body>
