Mathjax fuck up

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
     <link href="{{ site.baseurl }}/css/theme.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/css/syntax.css" rel="stylesheet">
     <script type="text/javascript"
-            src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+            src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     {% if jekyll.environment == 'production' %}
     {% include analytics.html %}
     {% endif %}
